--- a/src/main/resources/at/javatetris/project/fxml/controlsExtraWindow_en.fxml
+++ b/src/main/resources/at/javatetris/project/fxml/controlsExtraWindow_en.fxml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.Cursor?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
@@ -19,17 +18,9 @@
             <Font size="29.0" />
          </font>
       </Text>
-      <Button layoutX="115.0" layoutY="252.0" mnemonicParsing="false" onMouseClicked="#saveKey" prefHeight="39.0" prefWidth="119.0" style="-fx-background-color: green;" text="Save" textFill="WHITE">
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor></Button>
-      <Button layoutX="343.0" layoutY="252.0" mnemonicParsing="false" onMouseClicked="#close" prefHeight="39.0" prefWidth="119.0" style="-fx-background-color: red;" text="Close" textFill="WHITE">
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor></Button>
       <Pane layoutX="128.0" layoutY="129.0" onMouseClicked="#startListener" prefHeight="111.0" prefWidth="297.0" style="-fx-background-color: white;">
          <children>
-            <Text fx:id="pressedKey" layoutX="102.0" layoutY="61.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="149.9999999999999">
+            <Text fx:id="pressedKey" layoutX="60.0" layoutY="49.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="177.9999999999999">
                <font>
                   <Font size="32.0" />
                </font>
@@ -41,7 +32,15 @@
             <Font size="18.0" />
          </font>
       </Text>
-      <CheckBox fx:id="spaceCheckBox" layoutX="436.0" layoutY="155.0" mnemonicParsing="false" text="Space" textFill="WHITE" />
-      <Text fill="WHITE" layoutX="436.0" layoutY="142.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Special Keys" />
+      <ImageView fitHeight="56.0" fitWidth="119.0" layoutX="128.0" layoutY="259.0" onMouseClicked="#saveKey" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../icons/save_button_en.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="56.0" fitWidth="119.0" layoutX="306.0" layoutY="259.0" onMouseClicked="#close" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../icons/close_button_en.png" />
+         </image>
+      </ImageView>
    </children>
 </Pane>
